<resources>
    <string name="app_name">LetsDraw</string>
    <string name="title_activity_draw">DrawActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="red">#FF0000</string>
    <string name="green">#00FF00</string>
    <string name="blue">#0000FF</string>
    <string name="yellow">#FFFF00</string>
    <string name="cyan">#00FFFF</string>
    <string name="pink">#FF00FF</string>
    <string name="brown">#663300</string>
    <string name="violet">#990099</string>
    <string name="orange">#FF6600</string>
    <string name="black">#000000</string>
    <string name="white">#FFFFFF</string>
    <string name="grey">#808080</string>

    <string name="stroke">Stroke</string>
    <string name="thickness">Thickness</string>
    <string name="transparency">Transparency</string>

    <string name="refresh">Refresh</string>
    <string name="users_nearby">Users nearby</string>
    <string name="group_information">Group information</string>

    <string name="erase">Erase</string>

    <string name="no_device_found">No device found</string>
    <string name="no_group">You are not part of a group</string>

    <string name="you_are_group_owner">You are the group owner</string>
    <string name="you_are_group_member">You are the group member</string>

    <string name="wifip2pdisabled">WIFI P2P disabled</string>
    <string name="connection_failed">Connection failed</string>
    <string name="group_owner_server_mode">Make sure the group owner is connected in Server Mode</string>
    <string name="ok">OK</string>

    <string name="server_mode">Server mode</string>
    <string name="local_mode">Local mode</string>
</resources>
